@@ -47,7 +47,8 @@ public class MeasurementService {
     MeasurementRepository measurementRepository;
 
     @Autowired
-    MeasurementTypeRepository measurementTypeRepository; ;
+    MeasurementTypeRepository measurementTypeRepository;
+    ;
     @Autowired
     AssetRepository assetRepository;
 
@@ -65,7 +66,7 @@ public class MeasurementService {
      * @return
      */
     public MeasurementType verifyMeasurementType(MeasurementType dao) {
-        MeasurementType dbType = dao.getId() != null? measurementTypeRepository.findById(dao.getId()).orElse(null):null;
+        MeasurementType dbType = dao.getId() != null ? measurementTypeRepository.findById(dao.getId()).orElse(null) : null;
         if (dbType == null
                 || (dbType.getName() == null && dao.getName() != null)
                 || !dbType.getName().equals(dao.getName())
@@ -84,8 +85,9 @@ public class MeasurementService {
         }
         return dbType;
     }
-  public MeasurementTypeDAORequest verifyMeasurementType(MeasurementTypeDAORequest dao) {
-        MeasurementType dbType = dao.getId() != null? measurementTypeRepository.findById(dao.getId()).orElse(null) : null;
+
+    public MeasurementTypeDAORequest verifyMeasurementType(MeasurementTypeDAORequest dao) {
+        MeasurementType dbType = dao.getId() != null ? measurementTypeRepository.findById(dao.getId()).orElse(null) : null;
         if (dbType == null
                 || (dbType.getName() == null && dao.getName() != null)
                 || !dbType.getName().equals(dao.getName())
@@ -100,7 +102,7 @@ public class MeasurementService {
             if (types.size() != 1) {
                 throw new InvalidCreationIdAlreadyDefinedException("Measurement type does not exists");
             }
-            return  MeasurementTypeDAORequest.create(types.get(0));
+            return MeasurementTypeDAORequest.create(types.get(0));
         }
         return MeasurementTypeDAORequest.create(dbType);
     }
@@ -123,9 +125,9 @@ public class MeasurementService {
         Measurement measurementEntity = measurement.mapToEntity();
         measurementEntity.setUuid(uuidRepository.saveAndFlush(new UUID()));
         measurementRepository.save(measurementEntity);
-        if(measurementEntity.getDetails()!=null){
+        if (measurementEntity.getDetails() != null) {
             measurementEntity.getDetails().forEach(
-                    it->this.setProperty(measurementEntity.getId(),it)
+                    it -> this.setProperty(measurementEntity.getId(), it)
             );
         }
         return MeasurementDAOResponse.create(measurementRepository.save(measurementEntity), null, null);
@@ -133,7 +135,22 @@ public class MeasurementService {
 
     @Transactional
     public List<MeasurementDAOResponse> save(List<MeasurementDAORequest> measurements) {
-        return measurements.stream().map(this::save).collect(Collectors.toList());
+        var filtered = measurements.stream().filter(it -> {
+            Long typeId = null;
+            if (it.getType() != null) {
+                var t = measurementTypeRepository.findMeasurementType(it.getType().getName(),
+                        it.getType().getUnit(), it.getType().getPhysicalName()).stream().findFirst();
+                if (t.isPresent()) {
+                    typeId = t.get().getId();
+                }
+            }
+            return !measurementRepository.findMeasurements(
+                    null, null, it.getName(), it.getSensorName(),
+                    it.getDomain() != null ? it.getDomain().name() : null, it.getDirection() != null ? it.getDirection().name() : null,
+                    typeId, null, 0, 1).isEmpty();
+
+        });
+        return filtered.map(this::save).collect(Collectors.toList());
     }
 
     public MeasurementDAOResponse duplicate(Long id) {
@@ -148,7 +165,7 @@ public class MeasurementService {
 
     public boolean deleteById(Long id) {
         var m = measurementRepository.findById(id)
-            .orElseThrow(() -> new InvalidNonExistingIdException("No measurement with id " + id + " found"));
+                .orElseThrow(() -> new InvalidNonExistingIdException("No measurement with id " + id + " found"));
         m.getDetails().forEach((it) -> measurementDetailsRepository.delete(it));
         measurementTagsRepository.findByMeasurementId(m.getId()).forEach(
                 (it) -> measurementTagsRepository.delete(it));
@@ -234,7 +251,7 @@ public class MeasurementService {
 
         return MeasurementDAOImpl.create(measurement);
     }
-    
+
     public List<MeasurementDAOImpl> findAssetMeasurements(
             Long assetId,
             Long offset,
@@ -345,8 +362,8 @@ public class MeasurementService {
     }
 
     public List<MeasurementType> getTypes(Map<String, String> filters, long offset, int limit) {
-        Page<MeasurementType> types = measurementTypeRepository.findAll(  new OffSetPaging(offset, limit,
-                Sort.by(Sort.Direction.ASC, "id",  "physicalName")));
+        Page<MeasurementType> types = measurementTypeRepository.findAll(new OffSetPaging(offset, limit,
+                Sort.by(Sort.Direction.ASC, "id", "physicalName")));
         Stream<MeasurementType> stream = types.stream();
 
         if (filters != null)
@@ -376,8 +393,8 @@ public class MeasurementService {
     public MeasurementTags saveTag(MeasurementTags tag) {
         if (tag.getId() != null && measurementTagsRepository.existsById(tag.getId()))
             throw new InvalidCreationIdAlreadyDefinedException("Already exists a tag with ID " + tag.getId());
-        if(!measurementTagsRepository.findByKeyAndValue(tag.getKey(), tag.getValue()).isEmpty())
-            throw new InvalidCreationIdAlreadyDefinedException("Tag already exists" + tag.getKey()+"="+tag.getValue());
+        if (!measurementTagsRepository.findByKeyAndValue(tag.getKey(), tag.getValue()).isEmpty())
+            throw new InvalidCreationIdAlreadyDefinedException("Tag already exists" + tag.getKey() + "=" + tag.getValue());
         return measurementTagsRepository.save(tag);
     }
 
@@ -390,7 +407,7 @@ public class MeasurementService {
                             "No tag with key " + it.getKey() + " and value: " + it.getValue());
                 }
                 return l.get(0);
-            }).collect(Collectors.toList());
+            }).toList();
             measurementTagsRepository.clearTags(measurementId);
             Optional<Boolean> hasFail =
                     tagList.stream().map(it -> measurementTagsRepository.setTag(it.getId(), measurementId) == 0).filter(
@@ -415,12 +432,12 @@ public class MeasurementService {
     }
 
     public boolean setTag(Long measurementId, String key, String value) {
-        requireMeasurement(measurementId);
-        this.deleteMeasurementTag(measurementId, key); //delete all other tags related with the measurement
+        requireMeasurement(measurementId); //delete all other tags related with the measurement
         var l = measurementTagsRepository.findByKeyAndValue(key, value); //Check if tag is defined in the tags table
         if (l.isEmpty()) {
             throw new InvalidNonExistingIdException("No tag with key " + key + " and value: " + value);
         }
+        this.deleteMeasurementTag(measurementId, key);
         var tag = l.get(0);
         measurementTagsRepository.setTag(tag.getId(), measurementId);
         return true;
@@ -473,7 +490,7 @@ public class MeasurementService {
 
                 return equals;
             });
-        return stream.map(it -> new TagDAO(it.getKey(), it.getValue(),it.getId())).collect(Collectors.toList());
+        return stream.map(it -> new TagDAO(it.getKey(), it.getValue(), it.getId())).collect(Collectors.toList());
     }
 
     public List<TagDAO> getTags(@NotNull String key, long offset, int limit) {
@@ -483,6 +500,16 @@ public class MeasurementService {
         else stream = measurementTagsRepository.findByKey(key).stream();
 
         return stream.map(it -> new TagDAO(it.getKey(), it.getValue(), it.getId())).collect(Collectors.toList());
+    }
+
+    public TagDAO getTag(@NotNull String key, String value) {
+        //delete all other tags related with the measurement
+        var l = measurementTagsRepository.findByKeyAndValue(key, value); //Check if tag is defined in the tags table
+        if (l.isEmpty()) {
+            return null;
+        }
+        var tag = l.get(0);
+        return new TagDAO(tag.getKey(), tag.getValue(), tag.getId());
     }
 
     public List<MeasurementTagsDAO> getMeasurementTags(Long measurementId) {
